client/src/app/home/home.component.scss
@import "../../styles/responsive.scss";

button {
  padding: 0 2rem 0 2rem;
}

#logo {
  flex: 1;
  max-height: 18rem;
  background-image: url("../../assets/images/sohn-wallpaper.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

section {
  max-width: $breakpoint-md;
  margin: auto;
}

